@@ -1,4 +1,4 @@
-/* $Id: cmd-bind-key.c,v 1.11 2008-06-02 22:09:49 nicm Exp $ */
+/* $Id: cmd-bind-key.c,v 1.12 2008-06-03 05:35:50 nicm Exp $ */
 
 /*
  * Copyright (c) 2007 Nicholas Marriott <nicm@users.sourceforge.net>
@@ -45,7 +45,8 @@ const struct cmd_entry cmd_bind_key_entry = {
 	cmd_bind_key_exec,
 	cmd_bind_key_send,
 	cmd_bind_key_recv,
-	cmd_bind_key_free
+	cmd_bind_key_free,
+	NULL
 };
 
 int
