@@ -1,4 +1,4 @@
-/* $Id: cmd-kill-server.c,v 1.1 2008-06-03 05:10:38 nicm Exp $ */
+/* $Id: cmd-kill-server.c,v 1.2 2008-06-03 05:35:50 nicm Exp $ */
 
 /*
  * Copyright (c) 2007 Nicholas Marriott <nicm@users.sourceforge.net>
@@ -35,6 +35,7 @@ const struct cmd_entry cmd_kill_server_entry = {
 	0,
 	NULL,
 	cmd_kill_server_exec,
+	NULL,
 	NULL,
 	NULL,
 	NULL
