@@ -1,4 +1,4 @@
-/* $Id: cmd-kill-session.c,v 1.7 2008-06-02 22:09:49 nicm Exp $ */
+/* $Id: cmd-kill-session.c,v 1.8 2008-06-03 05:35:51 nicm Exp $ */
 
 /*
  * Copyright (c) 2007 Nicholas Marriott <nicm@users.sourceforge.net>
@@ -37,7 +37,8 @@ const struct cmd_entry cmd_kill_session_entry = {
 	cmd_kill_session_exec,
 	cmd_sessiononly_send,
 	cmd_sessiononly_recv,
-	cmd_sessiononly_free
+	cmd_sessiononly_free,
+	NULL
 };
 
 void
