@@ -1,4 +1,4 @@
-/* $Id: cmd-list-clients.c,v 1.5 2008-06-03 05:10:38 nicm Exp $ */
+/* $Id: cmd-list-clients.c,v 1.6 2008-06-03 05:35:51 nicm Exp $ */
 
 /*
  * Copyright (c) 2007 Nicholas Marriott <nicm@users.sourceforge.net>
@@ -35,6 +35,7 @@ const struct cmd_entry cmd_list_clients_entry = {
 	0,
 	NULL,
 	cmd_list_clients_exec,
+	NULL,
 	NULL,
 	NULL,
 	NULL
