@@ -1,4 +1,4 @@
-/* $Id: cmd-list-keys.c,v 1.7 2008-06-03 05:10:38 nicm Exp $ */
+/* $Id: cmd-list-keys.c,v 1.8 2008-06-03 05:35:51 nicm Exp $ */
 
 /*
  * Copyright (c) 2007 Nicholas Marriott <nicm@users.sourceforge.net>
@@ -32,6 +32,7 @@ const struct cmd_entry cmd_list_keys_entry = {
 	0,
 	NULL,
 	cmd_list_keys_exec,
+	NULL,
 	NULL,
 	NULL,
 	NULL
