@@ -1,4 +1,4 @@
-/* $Id: cmd-list-windows.c,v 1.17 2008-06-02 22:09:49 nicm Exp $ */
+/* $Id: cmd-list-windows.c,v 1.18 2008-06-03 05:35:51 nicm Exp $ */
 
 /*
  * Copyright (c) 2007 Nicholas Marriott <nicm@users.sourceforge.net>
@@ -36,7 +36,8 @@ const struct cmd_entry cmd_list_windows_entry = {
 	cmd_list_windows_exec,
 	cmd_sessiononly_send,
 	cmd_sessiononly_recv,
-	cmd_sessiononly_free
+	cmd_sessiononly_free,
+	NULL
 };
 
 void
