@@ -1,4 +1,4 @@
-/* $Id: cmd-paste-buffer.c,v 1.5 2008-06-02 22:09:49 nicm Exp $ */
+/* $Id: cmd-paste-buffer.c,v 1.6 2008-06-03 05:35:51 nicm Exp $ */
 
 /*
  * Copyright (c) 2007 Nicholas Marriott <nicm@users.sourceforge.net>
@@ -36,7 +36,8 @@ const struct cmd_entry cmd_paste_buffer_entry = {
 	cmd_paste_buffer_exec,
 	cmd_windowonly_send,
 	cmd_windowonly_recv,
-	cmd_windowonly_free
+	cmd_windowonly_free,
+	NULL
 };
 
 void
