@@ -1,4 +1,4 @@
-/* $Id: cmd-rename-session.c,v 1.6 2008-06-02 21:08:36 nicm Exp $ */
+/* $Id: cmd-rename-session.c,v 1.7 2008-06-03 05:35:51 nicm Exp $ */
 
 /*
  * Copyright (c) 2007 Nicholas Marriott <nicm@users.sourceforge.net>
@@ -46,7 +46,8 @@ const struct cmd_entry cmd_rename_session_entry = {
 	cmd_rename_session_exec,
 	cmd_rename_session_send,
 	cmd_rename_session_recv,
-	cmd_rename_session_free
+	cmd_rename_session_free,
+	NULL
 };
 
 int
