@@ -1,4 +1,4 @@
-/* $Id: cmd-send-keys.c,v 1.5 2008-06-03 05:10:38 nicm Exp $ */
+/* $Id: cmd-send-keys.c,v 1.6 2008-06-03 05:35:51 nicm Exp $ */
 
 /*
  * Copyright (c) 2008 Nicholas Marriott <nicm@users.sourceforge.net>
@@ -46,7 +46,8 @@ const struct cmd_entry cmd_send_keys_entry = {
 	cmd_send_keys_exec,
 	cmd_send_keys_send,
 	cmd_send_keys_recv,
-	cmd_send_keys_free
+	cmd_send_keys_free,
+	NULL
 };
 
 int
