@@ -1,4 +1,4 @@
-/* $Id: cmd-unlink-window.c,v 1.8 2008-06-02 22:09:49 nicm Exp $ */
+/* $Id: cmd-unlink-window.c,v 1.9 2008-06-03 05:35:51 nicm Exp $ */
 
 /*
  * Copyright (c) 2007 Nicholas Marriott <nicm@users.sourceforge.net>
@@ -34,8 +34,8 @@ const struct cmd_entry cmd_unlink_window_entry = {
 	cmd_unlink_window_exec,
 	cmd_windowonly_send,
 	cmd_windowonly_recv,
-	cmd_windowonly_free
-
+	cmd_windowonly_free,
+	NULL
 };
 
 void
